--- a/App_try/app/src/main/res/layout/fragment_profile.xml
+++ b/App_try/app/src/main/res/layout/fragment_profile.xml
@@ -38,14 +38,7 @@
                     android:layout_centerVertical="true"
                 />
 
-                <ImageView
-                    android:id="@+id/options_view"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:src="@drawable/options"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"
-                    />
+
 
             </RelativeLayout>
 
@@ -92,36 +85,13 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:orientation="horizontal">
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:orientation="vertical">
 
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="Post"
-                                android:textSize="12dp"
-                                android:textColor="@android:color/black"
-                                />
-
-                            <TextView
-                                android:id="@+id/total_posts"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="0"
-                                android:textSize="12dp"
-                                android:textColor="@android:color/black"
-                                />
-
-
-                        </LinearLayout>
 
                         <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="7dp"
+                            android:layout_marginRight="5dp"
+                            android:layout_marginLeft="25dp"
                             android:layout_gravity="center"
                             android:orientation="vertical">
 
@@ -137,6 +107,7 @@
                                 android:id="@+id/total_totalf"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:layout_gravity="center"
                                 android:text="0"
                                 android:textSize="12dp"
                                 android:textColor="@android:color/black"
@@ -163,6 +134,7 @@
                                 android:id="@+id/total_following"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:layout_gravity="center"
                                 android:text="0"
                                 android:textSize="12dp"
                                 android:textColor="@android:color/black"
@@ -226,29 +198,42 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:background="@drawable/button_black_background"
+                android:orientation="vertical"
+
                 android:layout_marginTop="10dp"
+                android:layout_marginVertical="25dp"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
                 >
-                <ImageButton
-                    android:id="@+id/images_grid_view_btn"
-                    android:layout_width="1dp"
+
+
+                <TextView
+
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/grid"
-                    android:layout_weight="1"
-                    style="?android:attr/buttonBarButtonStyle"
+                    android:text="Descrição: Trabalhador em qualquer area necessária \nPara mais informações contacte-me.\n"
+                    android:textSize="16dp"
+                    android:textStyle=""
+                    android:textColor="@android:color/black"
                     />
-                <ImageButton
-                    android:id="@+id/images_save_btn"
-                    android:layout_width="1dp"
-                    android:layout_height="49dp"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/save_large_icon"
-                    android:layout_weight="1"
-                    style="?android:attr/buttonBarButtonStyle"
+                <TextView
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Zona de trabalho: Região do Grande Porto\n"
+                    android:textSize="16dp"
+                    android:textColor="@android:color/black"
                     />
+
+                <TextView
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Preço: 10€/h\n"
+                    android:textSize="16dp"
+                    android:textColor="@android:color/black"
+                    />
+
 
             </LinearLayout>
         </LinearLayout>
